# libra

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260512_0000_0001_initial_memory_schema.py  20260512_0001_0002_tool_permissions.py  20260512_0002_0003_spotify_accounts.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/routes/: health.py  integrations.py  memory.py  tools.py  voice.py
apps/api/app/core/: config.py  db.py  redis.py
apps/api/app/models/: __init__.py  base.py  integrations.py  memory.py  tools.py
apps/api/app/schemas/: memory.py  tools.py  voice.py
apps/api/app/services/: status.py
apps/api/app/services/events/: __init__.py  vision_bridge.py
apps/api/app/services/integrations/: __init__.py
apps/api/app/services/memory/: __init__.py  distiller.py  embeddings.py  long_term.py  placeholder.py  service.py  short_term.py
apps/api/app/services/tools/: __init__.py  base.py  executor.py  permissions.py  placeholder.py  registry.py
apps/api/app/services/voice/: base.py  elevenlabs_openai.py  elevenlabs_openai_session.py  openai_realtime.py  registry.py  ws_tokens.py
apps/api/app/tests/: test_health.py  test_memory_imports.py  test_voice.py  test_ws_tokens.py
docs/: ARCHITECTURE.md  (+4 more)
services/vision/: .env.example  .gitignore  README.md  pyproject.toml
services/vision/src/libra_vision/: __init__.py  camera.py  config.py  detector.py  main.py  policy.py  publisher.py
(+49 files in other folders)
