[project]
name = "libra-vision"
version = "0.1.0"
description = "Real-time object detection (YOLO) → MQTT event publisher for LIBRA."
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.3.0",
    "opencv-python>=4.10.0.84",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "numpy>=1.26,<3",
]

[project.scripts]
libra-vision = "libra_vision.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/libra_vision"]
